--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+<input type="email" [(ngModel)]="user" placeholder="E-mail">
+<br/>
+<input type="password" [(ngModel)]="password" placeholder="Password">
+<br/>
+<button (click)="login()">Login</button> 
