change in login component

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,4 @@
-<input type="email" [(ngModel)]="user" placeholder="E-mail">
+<input type="string" [(ngModel)]="user" placeholder="usuario">
 <br/>
 <input type="password" [(ngModel)]="password" placeholder="Password">
 <br/>
