--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -2,4 +2,5 @@
 <br/>
 <input type="password" [(ngModel)]="password" placeholder="Password">
 <br/>
+<p>usuario: Admin Clave: Admin</p>
 <button (click)="login()">Login</button> 
